@@ -23,25 +23,40 @@
 #' @param seFactor  a numeric value giving a multiplication factor of the 
 #' standard error for the selection of the best model.  This is ignored if 
 #' \code{selectBest} is \code{"min"}.
+#' @param tuning  a list of tuning parameter values that correspond to the 
+#' different prediction error results.  The names of the list components should 
+#' thereby correspond to the argument names of the tuning parameters.  For each 
+#' tuning parameter, a vector of values can be supplied.  A data frame 
+#' containing all possible combinations of tuning parameter values is then 
+#' added to the reshaped prediction error results.
 #' @param \dots  additional arguments to be passed down.
 #' 
-#' @returnClass perrySelect
-#' @returnItem splits  an object giving the data splits used to estimate the 
-#' prediction error.
-#' @returnItem best  an integer giving the index of the model with the best 
-#' prediction performance.
+#' @return  An object of class \code{"perrySelect"} (subclass 
+#' \code{"perryTuning"} if a list of tuning parameters is supplied) with the 
+#' following components:
 #' @returnItem pe  a data frame containing the estimated prediction errors for 
 #' the models.  In case of more than one resampling replication, those are 
 #' average values over all replications.
 #' @returnItem se  a data frame containing the estimated standard errors of the 
 #' prediction loss for the models.
+#' @returnItem reps  a data frame containing the estimated prediction errors 
+#' for the models from all replications.  This is only returned in case of more 
+#' than one resampling replication.
+#' @returnItem splits  an object giving the data splits used to estimate the 
+#' prediction error.
+#' @returnItem y  the response.
+#' @returnItem yHat  a list containing the predicted values for the 
+#' models.  Each list component is again a list containing the corresponding 
+#' predicted values from all replications.
+#' @returnItem best  an integer giving the index of the model with the best 
+#' prediction performance.
 #' @returnItem selectBest  a character string specifying the criterion used for 
 #' selecting the best model.
 #' @returnItem seFactor  a numeric value giving the multiplication factor of 
 #' the standard error used for the selection of the best model.
-#' @returnItem reps  a data frame containing the estimated prediction errors 
-#' for the models from all replications.  This is only returned in case of more 
-#' than one resampling replication.
+#' @returnItem tuning  a data frame containing the grid of tuning parameter 
+#' values that correspond to the different prediction error results (only 
+#' subclass \code{"perryTuning"}).
 #' 
 #' @author Andreas Alfons
 #' 
@@ -59,27 +74,38 @@
 #' 
 #' @export
 
-perryReshape <- function(x, selectBest = c("min", "hastie"), 
-        seFactor = 1, ...) {
-    # initializations
-    if(!inherits(x, c("perry", "perrySelect"))) 
-        stop("object must inherit from class \"perry\" or \"perrySelect\"")
-    if(npe(x) == 0 || isTRUE(nfits(x) == 0)) stop("empty object")
-    peNames <- peNames(x)
-    # create list of objects with one column
-    peName <- defaultNames(1)
-    objects <- lapply(peNames, 
-        function(s) {
-            xs <- subset(x, select=s)
-            peNames(xs) <- peName
-            xs
-        })
-    # substitute "PE" in default names by "Fit"
-    if(identical(peNames, defaultNames(length(peNames)))) {
-        fitName <- defaultFitNames(1)
-        peNames <- gsub(peName, fitName, peNames, fixed=TRUE)
+perryReshape <- function(x, selectBest = c("min", "hastie"), seFactor = 1, 
+                         tuning = list(), ...) {
+  # initializations
+  if(!inherits(x, c("perry", "perrySelect"))) 
+    stop("object must inherit from class \"perry\" or \"perrySelect\"")
+  if(npe(x) == 0 || isTRUE(nfits(x) == 0)) stop("empty object")
+  peNames <- peNames(x)
+  # create list of objects with one column
+  peName <- defaultNames(1)
+  objects <- lapply(peNames, function(s) {
+    xs <- subset(x, select=s)
+    peNames(xs) <- peName
+    xs
+  })
+  # substitute "PE" in default names by "Fit"
+  if(identical(peNames, defaultNames(length(peNames)))) {
+    fitName <- defaultFitNames(1)
+    peNames <- gsub(peName, fitName, peNames, fixed=TRUE)
+  }
+  # call perrySelect() to combine the model fits
+  names(objects) <- peNames
+  pe <- perrySelect(.list=objects, .selectBest=selectBest, .seFactor=seFactor)
+  # add tuning parameters if requested
+  if(length(tuning) > 0) {
+    n <- nfits(pe)
+    tuning <- do.call(expand.grid, tuning)
+    if(nrow(tuning) != n) {
+      stop(sprintf("'tuning' must correspond to %d models", n))
     }
-    # call perrySelect() to combine the model fits
-    names(objects) <- peNames
-    perrySelect(.list=objects, .selectBest=selectBest, .seFactor=seFactor)
+    pe$tuning <- tuning
+    class(pe) <- c("perryTuning", "perrySelect")
+  }
+  # return object
+  pe
 }
